--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,1 +1,7 @@
 @import '../assets/libs/font-awesome-4.7.0/css/font-awesome.min.css'; 
+
+
+.row {
+    margin-left: 0px;
+    margin-right: 0px;
+}
