cards to buttons and last layout fix

--- a/src/app/secure/game-history/game-history.component.html
+++ b/src/app/secure/game-history/game-history.component.html
@@ -36,54 +36,54 @@
 
 <div *ngIf="selectedField" class="row">
 
-  <div class="card user-card col-3 d-flex px-1 py-1 gx-1 gy-1">
+        <div class="container">
 
-    <div *ngIf="selectedField">
+          <div class="card-header row">
+            <h5> {{selectedField.name}} ({{selectedField.configs.length}})</h5>
+          </div>
 
-      <div class="card-header">
-        <h5> {{selectedField.name}} ({{selectedField.configs.length}})</h5>
-      </div>
+          <div class="card-body row">
 
-      <div class="card-body">
+          <div class="col-sm-3">
 
-         <img
-            class="img img-thumbnail"
-            src="{{selectedField.imageData}}"
-            onerror="this.onerror=null"
-            alt=""/>
+           <img
+              class="img img-thumbnail"
+              src="{{selectedField.imageData}}"
+              onerror="this.onerror=null"
+              alt=""/>
 
-         <div class="card-title" [innerHtml]="selectedField.description"></div>
+            </div>
 
-      </div>
-    </div>
+            <div class="col px-1 py-1 gx-1 gy-1">
+
+              <select class="form-control" (change)="changeGameMode($event)">
+                  <option disabled selected> -- Select Game Mode -- </option>
+                  <option [value]=config.id *ngFor="let config of selectedField.configs">
+                      {{config.description}} ({{config.games.length}})</option>
+              </select>
+              <br/>
+              <select *ngIf="selectedMode" size="7" class="form-control" (change)="changeGame($event)">
+                  <option disabled selected> -- Select Game -- </option>
+                  <option [value]=game.id *ngFor="let game of selectedMode.games">
+                      {{game.creationDate.toLocaleString()}} </option>
+              </select>
+
+            </div>
+
+
+
+            <div *ngIf="selectedGame && selectedMode" class="col px-1 py-1 gx-1 gy-1">
+            <app-map [gameID]="selectedGame?.id" [mapID]="selectedMode?.mapID" [deviceData]="selectedMode?.deviceMap"></app-map>
+            </div>
+
+            </div>
+
+
+            <div *ngIf="selectedGame && selectedMode" class="col">
+              <app-team-score [teams]="scoreSvc?.teams" [barChartData]="scoreSvc?.barChartData" ></app-team-score>
+            </div>
+
+
+        </div>
 
   </div>
-
-  <div class="col-3 px-1 py-1 gx-1 gy-1">
-
-    <select class="form-control" (change)="changeGameMode($event)">
-        <option disabled selected> -- Select Game Mode -- </option>
-        <option [value]=config.id *ngFor="let config of selectedField.configs">
-            {{config.description}} ({{config.games.length}})</option>
-    </select>
-    <br/>
-    <select *ngIf="selectedMode" size="5" class="form-control" (change)="changeGame($event)">
-        <option disabled selected> -- Select Game -- </option>
-        <option [value]=game.id *ngFor="let game of selectedMode.games">
-            {{game.creationDate.toLocaleString()}} </option>
-    </select>
-
-  </div>
-
-
-<div *ngIf="selectedGame && selectedMode" class="row">
-
-    <div class="col d-flex px-5 py-5 gx-5 gy-5">
-    <app-team-score [teams]="scoreSvc?.teams" [barChartData]="scoreSvc?.barChartData" ></app-team-score>
-    </div>
-    <div class="col px-5 py-5 gx-5 gy-5">
-    <app-map [gameID]="selectedGame?.id" [mapID]="selectedMode?.mapID" [deviceData]="selectedMode?.deviceMap"></app-map>
-    </div>
-</div>
-
-</div>
