--- a/src/app/secure/dashboard/dashboard.component.html
+++ b/src/app/secure/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-4">
-      <button *ngIf="viewForUser" type="button" class="btn btn-primary">Back to Self</button>
+      <button (click)="backToSelf()" *ngIf="viewForUser" type="button" class="btn btn-primary">Back to Self</button>
       <div class="card card-profile">
         <div class="card-header"></div>
         <div class="card-body text-center"><img  src="{{currentVals.imageData}}" class="card-profile-img">
