--- a/src/app/global/team-score/team-score.component.html
+++ b/src/app/global/team-score/team-score.component.html
@@ -34,6 +34,35 @@
             [columnMode]="'force'"
             [rowHeight]="'auto'"
             [rowClass]="getRowClass">
+            <ngx-datatable-column prop="callSign">
+                <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
+                  <a  class="nav-link edit" (click)="viewCourseTrainings(value)">
+                    <i class="fa fa-pencil-square-o" aria-hidden="true">{{row.name}}</i>
+                  </a>
+                </ng-template>
+            </ngx-datatable-column> 
+            <ngx-datatable-column prop="lastAction">
+                <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
+                  <a  class="nav-link edit" (click)="viewCourseTrainings(value)">
+                    <i class="fa fa-pencil-square-o" aria-hidden="true">{{row.lastAction}}</i>
+                  </a>
+                </ng-template>
+            </ngx-datatable-column> 
+            <ngx-datatable-column *ngIf="showLastLocation" prop="lastLocation">
+                <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
+                  <a  class="nav-link edit" (click)="viewCourseTrainings(value)">
+                    <i class="fa fa-pencil-square-o" aria-hidden="true">{{row.lastLocation}}</i>
+                  </a>
+                </ng-template>
+            </ngx-datatable-column> 
+            <ngx-datatable-column prop="totalPoints">
+                <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
+                  <a  class="nav-link edit" (click)="viewCourseTrainings(value)">
+                    <i class="fa fa-pencil-square-o" aria-hidden="true">{{row.totalPoints}}</i>
+                  </a>
+                </ng-template>
+            </ngx-datatable-column> 
+            
         </ngx-datatable>
 
 </div>
