if non secure user ask to sign in

--- a/src/app/global/team-score/team-score.component.html
+++ b/src/app/global/team-score/team-score.component.html
@@ -37,7 +37,7 @@
             <ngx-datatable-column prop="callSign">
                 <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
                   
-                    <i class="hover" aria-hidden="true" (click)="viewCourseTrainings(row.name)">{{row.name}}</i>
+                    <i class="hover" aria-hidden="true" (click)="viewPlayerProfile(row.name)">{{row.name}}</i>
                   
                 </ng-template>
             </ngx-datatable-column> 
