add default row padding

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,6 +9,9 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
+.row {
+  padding: 0 1rem;
+}
 
 .btn:hover, li.nav-item:hover {
     transform: scale(1.08);
