use select to handle row selection

--- a/src/app/non-secure/mydevices/mydevices.component.html
+++ b/src/app/non-secure/mydevices/mydevices.component.html
@@ -70,7 +70,7 @@
                 <div *ngIf="currentTab == 'teamScore'" class="content-panel" id="v-pills-profile" role="tabpanel"
                     aria-labelledby="v-pills-profile-tab">
 
-                    <app-team-score [showLastLocation]="true" [teams]="scoreSvc.teams" [barChartData]="scoreSvc.barChartData"></app-team-score>
+                    <app-team-score [teams]="scoreSvc.teams" [barChartData]="scoreSvc.barChartData"></app-team-score>
 
                 </div>
 
