--- a/src/app/global/team-score/team-score.component.html
+++ b/src/app/global/team-score/team-score.component.html
@@ -33,36 +33,9 @@
             [columns]="teamScoreColumns"
             [columnMode]="'force'"
             [rowHeight]="'auto'"
-            [rowClass]="getRowClass">
-            <ngx-datatable-column prop="callSign">
-                <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
-                  
-                    <i class="hover" aria-hidden="true" (click)="viewPlayerProfile(row.name)">{{row.name}}</i>
-                  
-                </ng-template>
-            </ngx-datatable-column> 
-            <ngx-datatable-column prop="lastAction">
-                <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
-                  
-                    <i class="fa fa-pencil-square-o" aria-hidden="true">{{row.lastAction}}</i>
-                  
-                </ng-template>
-            </ngx-datatable-column> 
-            <ngx-datatable-column *ngIf="showLastLocation" prop="lastLocation">
-                <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
-                  
-                    <i class="fa fa-pencil-square-o" aria-hidden="true">{{row.lastLocation}}</i>
-                  
-                </ng-template>
-            </ngx-datatable-column> 
-            <ngx-datatable-column prop="totalPoints">
-                <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
-                 
-                    <i class="fa fa-pencil-square-o" aria-hidden="true">{{row.totalPoints}}</i>
-                  
-                </ng-template>
-            </ngx-datatable-column> 
-            
+            [selectionType]="'single'"
+            [rowClass]="getRowClass"
+            (select)="viewPlayerProfile($event)">
         </ngx-datatable>
 
 </div>
