--- a/src/app/secure/dashboard/dashboard.component.html
+++ b/src/app/secure/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
   <button (click)="backToSelf()" *ngIf="viewForUser" type="button" class="btn btn-primary">Back to Self</button>
   <div *ngIf="!pageLvlError" class="row">
     <div class="col-lg-4">
-      
+
       <div class="card card-profile">
         <div class="card-header"></div>
         <div class="card-body text-center"><img  src="{{currentVals.imageData}}" class="card-profile-img">
@@ -82,37 +82,14 @@
         </div>
 
       </form>
-      <!-- <div class="card">
-        <div class="card-header">
-          <h2 class="center-cust">Individual Game Stats</h2>
-        </div>
-        <accordion>
-
-          <accordion-group *ngFor="let game of gameHistData; let i = index"
-          heading="Game #: {{game.id}}"
-          [panelClass]="customClass"
-          [isOpen]="isFirstOpen">
-
-          <h4 *ngIf="isField">Start Time: {{ game.start}}</h4>
-          <h4 *ngIf="isField">End Time: {{ game.end }}</h4>
-
-          <ngx-charts-advanced-pie-chart   [scheme]="colorScheme" [results]="game.pieData"
-            [gradient]="gradient" (select)="onSelect($event)" (activate)="onActivate($event)"
-            (deactivate)="onDeactivate($event)">
-          </ngx-charts-advanced-pie-chart>
-
-        </accordion-group>
-        </accordion>
-      </div> -->
 
     </div>
   </div>
   <div *ngIf="pageLvlError">
     <div class="">
       <div class="alert alert-danger center-cust">
-        We are sorry something went wrong in showing the page. <br>
-        Please go back and try again or <a [routerLink]="['/non-secure/contact-us']">contact us from
-          our contact us page</a>
+        Something went wrong in showing the page. <br>
+        Please go back and try again or <a [routerLink]="['/non-secure/contact-us']">contact us</a>.
       </div>
     </div>
   </div>
