--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,9 @@
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
 <!-- <link rel="stylesheet" href="../assets/libs/font-awesome-4.7.0/css/font-awesome.min.css"> -->
 <!-- <link rel="stylesheet" href="../assets/libs/font-awesome-4.7.0/css/font-awesome.min.css"/> -->
- 
+ <!-- Global site tag (gtag.js) - Google Analytics -->
+
+
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v10.0&appId=348781009877452&autoLogAppEvents=1" nonce="5pybCMhH"></script> 
 <!-- above is for loading fb -->
 <router-outlet></router-outlet>
