--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,10 @@
 @import '../assets/libs/font-awesome-4.7.0/css/font-awesome.min.css';
 
 
+.btn {
+  margin: 0.5rem;
+}
+
 .row {
     margin-left: 0px !important;
     margin-right: 0px !important;
