--- a/src/app/non-secure/features-list/features-list.component.html
+++ b/src/app/non-secure/features-list/features-list.component.html
@@ -1,17 +1,35 @@
 <div class="container">
+
+  <div class="row justify-content-center">
+      <div class="col">
+
+          <h5 class="mt-4"> <span class="p-2 bg-light shadow rounded text-success"> Version 1.0.1</span> - 7th July 2021</h5>
+          <ul class="list-unstyled mt-3">
+              <li class="text-muted ml-3"><i class="mdi mdi-circle-medium mr-2"></i>View other player dashboards.</li>
+              <li class="text-muted ml-3"><i class="mdi mdi-circle-medium mr-2"></i>Add Past Games.</li>
+              <li class="text-muted ml-3"><i class="mdi mdi-circle-medium mr-2"></i>Cleanup look and feel.</li>
+          </ul>
+
+      </div>
+  </div>
+
     <div class="row justify-content-center">
-        <div class="col-lg-8 col-md-10 col-12">
+        <div class="col">
 
             <h5 class="mt-4"> <span class="p-2 bg-light shadow rounded text-success"> Version 1.0.0</span> - 1st May 2021</h5>
             <ul class="list-unstyled mt-3">
                 <li class="text-muted ml-3"><i class="mdi mdi-circle-medium mr-2"></i>Initial Release</li>
             </ul>
 
+        </div>
+    </div>
 
+    <div class="row">
+      <div class="col">
+      <div class="mt-4">
+          <a href="#" class="btn btn-primary">Please give us Feedback!</a>
+      </div>
+      </div>
+    </div>
 
-            <div class="mt-4">
-                <a href="#" class="btn btn-primary">Please give us your Feedback!</a>
-            </div>
-        </div><!--end col-->
-    </div><!--end row-->
 </div>
