--- a/src/app/non-secure/mydevices/mydevices.component.html
+++ b/src/app/non-secure/mydevices/mydevices.component.html
@@ -44,8 +44,8 @@
                     <nav class="side-menu">
                         <ul class="nav">
                             <li id="map" (click)="changeGameTab('map')" class="active"><a>Map</a></li>
-                            <li id="teamScore" (click)="changeGameTab('teamScore')"><a>Team Score</a></li>
-                            <li id="EventsTracker" (click)="changeGameTab('EventsTracker')"><a>Events Tracker</a></li>
+                            <li id="teamScore" (click)="changeGameTab('teamScore')"><a>Score</a></li>
+                            <li id="EventsTracker" (click)="changeGameTab('EventsTracker')"><a>Events</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -79,6 +79,14 @@
                     aria-labelledby="v-pills-settings-tab">
 
                     <h3 class="center-cust"> Event History</h3>
+
+                    <input
+                      type="text"
+                      class="form-control"
+                      style="padding:8px;margin:15px auto;width:30%;"
+                      placeholder="Type to filter by Callsign..."
+                      (keyup)="updateFilter($event)"
+                    />
 
                     <ngx-datatable
                         class="material striped"
