update FB share icon

--- a/src/app/non-secure/mydevices/mydevices.component.html
+++ b/src/app/non-secure/mydevices/mydevices.component.html
@@ -40,13 +40,13 @@
                     <!-- <nav class="side-menu"> -->
                     <div class="container ">
 
-                        <div class="col btn-group btn-group-toggle d-flex justify-content-center">
+                        <div class="col btn-group btn-group-toggle d-flex justify-content-center align-middle">
 
-                            <div class="btn btn-light fa fa-arrow-left" (click)="goBackToMainMenu()">
+                            <div class="btn fa fa-arrow-left" (click)="goBackToMainMenu()">
                             </div>
 
                             <div class="btn btn-light active" id="map" (click)="changeGameTab('map')">
-                            Map & Score
+                            C3I
                             </div>
 
                             <div class="btn btn-light" id="eventsTracker" (click)="changeGameTab('eventsTracker')">
@@ -58,8 +58,8 @@
                            data-size="small"
                            target="_blank"
                            href="{{fbShareUrl}}"
-                           class="btn btn-md btn-social btn-facebook">
-                            <i class="fa fa-facebook fa-fw"></i>Share!</a>
+                           class="btn btn-social btn-facebook fa fa-share">
+                            <i class="fa fa-facebook fa-fw"></i></a>
 
                       </div>
 
